--- a/client/public/about.css
+++ b/client/public/about.css
@@ -5,6 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/* Background */
 .wrapper{
     width: 100%;
     min-height: 100vh;
@@ -24,6 +25,7 @@
     margin-top: 80px;
     height: auto;
 }
+/* Aobut Us Content */
 .content{
     width: 60%;
     float: left;
@@ -48,7 +50,7 @@
     margin-top: 10px;
     line-height: 1.5;
 }
-
+/* Navigation Bar */
 .navbar{
     width: 100%;
     height: 15vh;
@@ -101,6 +103,7 @@ nav ul li::after{
 nav ul li:hover::after{
     width: 100%;
 }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -113,7 +116,7 @@ body {
   *, *:before, *:after {
     box-sizing: inherit;
   }
-  
+  /* Creator Info */
   .column {
     float: left;
     width: 33.3%;
