--- a/client/public/home.css
+++ b/client/public/home.css
@@ -13,6 +13,7 @@
     box-sizing: border-box;
     position: relative;
 }
+/* Navigation Bar */
 .navbar{
     width: 100%;
     height: 15vh;
@@ -65,6 +66,7 @@ nav ul li::after{
 nav ul li:hover::after{
     width: 100%;
 }
+/* Main Content */
 .content{
     width: 90%;
     color: #ffff;
@@ -76,11 +78,14 @@ nav ul li:hover::after{
 }
 .content h1{
     font-size: 62px;
+    text-shadow: 5px 5px 10px black;
+
 }
 .content p{
     margin: 10px 0 40px;
     font-size: 25px;
     color: #FFFF;
+    text-shadow: 5px 5px 10px black;
 }
 
 .content .btn{
@@ -91,25 +96,10 @@ nav ul li:hover::after{
     box-sizing: border-box;
     text-decoration: none;
     color: #FFFF;
-    box-shadow: 3px 8px 22px rgba(94, 28, 68, 0.15);
+    box-shadow: 3px 8px 22px rgb(115, 115, 115);
+    
 }
-.hero-btn{
-    display: inline-block;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    font-size: 20px;
-    background: #e4e5e6;
-    opacity: 0.5;
-    position: relative;
-    cursor: pointer;
-}
-.hero-btn:hover{
-    border: 1px solid #77a0ff;
-    background: #77a0ff;
-    transition: 0.5s;
-}
+
 
 @media(max-width: 700px){
     .content h1{
